lib/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = function() { return p.getResults(); },
        peg$c3 = function(vfl) { return p.getResults().concat(vfl); },
        peg$c4 = function(exp) { return exp; },
        peg$c5 = null,
        peg$c6 = function(d, head, tail, o) {
              var connection, result, ccss, chainedViews, withContainer,
                tailView, tailViewObj, headView, headViewObj;
              p.addSplatIfNeeded(head, d, o);
              result = head;
              headViewObj = head;
              headView = headViewObj.view;
              chainedViews = [];
              if (headView !== "|") {chainedViews.push(headView);}
              p.addPreds(headView,head.preds,d);
              for (var i = 0; i < tail.length; i++) {
                connection = tail[i][1];
                tailViewObj = tail[i][3];
                p.addSplatIfNeeded(tailViewObj, d, o);
                tailView = tailViewObj.view;
                if (tailView !== "|") {chainedViews.push(tailView);}
                p.addPreds(tailView,tail[i][3].preds,d);
                result = [
                  //"c",
                  connection,
                  result,
                  tailView
                ];
                if (!(headViewObj.isPoint && tailViewObj.isPoint)) {
                  withContainer = ( headView =="|" || tailView === "|");
                  ccss = p.getLeftVar(headView, d, o, headViewObj) + " "
                    + p.getConnectionString(connection, d, o, withContainer) + " "
                    + p.getRightVar(tailView, d, o, tailViewObj)
                    + p.getTrailingOptions(o)
                    + p.getSW(o);
                  p.addC(
                    ccss.trim()
                );}
                headViewObj = tailViewObj;
                headView = tailView;
              }
              p.addChains(chainedViews,o);
              return {'vfl':d, o:o};
            },
        peg$c7 = function(d, selector, o, s) {
           var ccss = "@chain ";
           selector = selector.join("").trim();
           ccss += selector + " ";
           ccss += p.leftVarNames[d] + "(";
           if (o.gap) {
             ccss += "+" + o.gap;
           }
           ccss += ")" + p.rightVarNames[d];
           if (o.chains) {
             o.chains.forEach( function (chain) {
                ccss += " " + chain[0] + "(";
                if (chain[1]) {
                  if (chain[1].raw) {
                    ccss += chain[1].raw;
                  }
                }
                ccss += ")";
               });
           }
           ccss += p.getTrailingOptions(o);
           ccss += p.getSW(o);
           p.addC(ccss.trim());
           return {vfl:d,o:o}
         },
        peg$c8 = "@horizontal",
        peg$c9 = { type: "literal", value: "@horizontal", description: "\"@horizontal\"" },
        peg$c10 = "@-gss-horizontal",
        peg$c11 = { type: "literal", value: "@-gss-horizontal", description: "\"@-gss-horizontal\"" },
        peg$c12 = "@-gss-h",
        peg$c13 = { type: "literal", value: "@-gss-h", description: "\"@-gss-h\"" },
        peg$c14 = "@h",
        peg$c15 = { type: "literal", value: "@h", description: "\"@h\"" },
        peg$c16 = function() {return 0;},
        peg$c17 = "@vertical",
        peg$c18 = { type: "literal", value: "@vertical", description: "\"@vertical\"" },
        peg$c19 = "@-gss-vertical",
        peg$c20 = { type: "literal", value: "@-gss-vertical", description: "\"@-gss-vertical\"" },
        peg$c21 = "@-gss-v",
        peg$c22 = { type: "literal", value: "@-gss-v", description: "\"@-gss-v\"" },
        peg$c23 = "@v",
        peg$c24 = { type: "literal", value: "@v", description: "\"@v\"" },
        peg$c25 = function() {return 1;},
        peg$c26 = function(os) {
            var obj = {};
            obj.chains = [];
            for (var i = 0; i < os.length; i++) {
              // proccess chains
              if (!!os[i].chain) {
                obj.chains.push(os[i].chain);
              }
              // or just add option
              else {
                obj[os[i].key] = os[i].value;
              }
            }
            return obj;
          },
        peg$c27 = { type: "other", description: "Option" },
        peg$c28 = function(chain) { return chain; },
        peg$c29 = "(",
        peg$c30 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c31 = ")",
        peg$c32 = { type: "literal", value: ")", description: "\")\"" },
        peg$c33 = function(key, value) {return {key:key.join(''), value:value.join('')};},
        peg$c34 = function(sw) {return {key:"sw",value:sw}; },
        peg$c35 = /^[^>=<!)]/,
        peg$c36 = { type: "class", value: "[^>=<!)]", description: "[^>=<!)]" },
        peg$c37 = { type: "other", description: "Chain" },
        peg$c38 = "chain-",
        peg$c39 = { type: "literal", value: "chain-", description: "\"chain-\"" },
        peg$c40 = function(prop, preds) { return {'chain':[prop.join(""),preds]};},
        peg$c41 = { type: "other", description: "ChainPredicate" },
        peg$c42 = function(items) {
            items.raw = "";
            items.forEach( function (item){
              items.raw += item.raw;
            });
            return items;
          },
        peg$c43 = "()",
        peg$c44 = { type: "literal", value: "()", description: "\"()\"" },
        peg$c45 = function() {return {raw:""};},
        peg$c46 = ",",
        peg$c47 = { type: "literal", value: ",", description: "\",\"" },
        peg$c48 = function(item) {
            item.raw = item.headEq + item.value + item.tailEq + item.s;
            return item;
          },
        peg$c49 = function(headEq, value, tailEq, s) {
              return {headEq:p.join(headEq),value:p.join(value),tailEq:p.join(tailEq),s:p.join(s)};},
        peg$c50 = /^[^>=<!) ]/,
        peg$c51 = { type: "class", value: "[^>=<!) ]", description: "[^>=<!) ]" },
        peg$c52 = { type: "other", description: "VFL Element" },
        peg$c53 = "|",
        peg$c54 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c55 = /^[^~\-]/,
        peg$c56 = { type: "class", value: "[^~\\-]", description: "[^~\\-]" },
        peg$c57 = function(name, pred) {return {view:p.stringify(name),preds:pred};},
        peg$c58 = function(point) {return {view:"|", isPoint:true, pos:point};},
        peg$c59 = function() {return {view:"|"};},
        peg$c60 = function(view, pred) {view = p.stringify(view); p.addSelector(view); return {view:view,preds:pred};},
        peg$c61 = "...",
        peg$c62 = { type: "literal", value: "...", description: "\"...\"" },
        peg$c63 = function(o, connection) {o.isSplat = true; o.connection = connection; return o;},
        peg$c64 = { type: "other", description: "Point" },
        peg$c65 = "<",
        peg$c66 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c67 = /^[^>]/,
        peg$c68 = { type: "class", value: "[^>]", description: "[^>]" },
        peg$c69 = ">",
        peg$c70 = { type: "literal", value: ">", description: "\">\"" },
        peg$c71 = function(position) {
            return p.stringify(position);
          },
        peg$c72 = { type: "other", description: "Predicate" },
        peg$c73 = function(preds) {return preds;},
        peg$c74 = { type: "other", description: "Predicate Expression" },
        peg$c75 = "==",
        peg$c76 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c77 = "<=",
        peg$c78 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c79 = ">=",
        peg$c80 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c81 = "=<",
        peg$c82 = { type: "literal", value: "=<", description: "\"=<\"" },
        peg$c83 = function() {return "<=";},
        peg$c84 = "=>",
        peg$c85 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c86 = function() {return ">=";},
        peg$c87 = function(eq) {return eq;},
        peg$c88 = /^[+\-\/*]/,
        peg$c89 = { type: "class", value: "[+\\-\\/*]", description: "[+\\-\\/*]" },
        peg$c90 = function(op) {return op;},
        peg$c91 = function(name) {return ["view",name.join("")];},
        peg$c92 = function(n) {return n.join("");},
        peg$c93 = "[",
        peg$c94 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c95 = "]",
        peg$c96 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c97 = function(name) {return "[" + name.join("") + "]";},
        peg$c98 = function(view, prop) {return view.join("") + "[" + prop.join("") + "]";},
        peg$c99 = function() {return "";},
        peg$c100 = { type: "other", description: "VFL Connection" },
        peg$c101 = "-",
        peg$c102 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c103 = function(gap) {return {op:"==",gap:gap};},
        peg$c104 = function() {return {op:"==",gap:"__STANDARD__"};},
        peg$c105 = "~",
        peg$c106 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c107 = function(gap) {return {op:"<=",gap:gap};},
        peg$c108 = function() {return {op:"<=",gap:"__STANDARD__"};},
        peg$c109 = function() {return {op:"<="};},
        peg$c110 = "",
        peg$c111 = function() {return {op:"=="};},
        peg$c112 = { type: "other", description: "VFL Connection Gap" },
        peg$c113 = /^[a-zA-Z0-9_$]/,
        peg$c114 = { type: "class", value: "[a-zA-Z0-9_$]", description: "[a-zA-Z0-9_$]" },
        peg$c115 = function(gap) {return gap.join("");},
        peg$c116 = /^[^[]/,
        peg$c117 = { type: "class", value: "[^[]", description: "[^[]" },
        peg$c118 = /^[^\]]/,
        peg$c119 = { type: "class", value: "[^\\]]", description: "[^\\]]" },
        peg$c120 = function(gap, varr) {return gap.join("") + "[" + varr.join("") + "]";},
        peg$c121 = { type: "other", description: "Strength / Weight" },
        peg$c122 = "!",
        peg$c123 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c124 = /^[a-zA-Z]/,
        peg$c125 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c126 = /^[0-9]/,
        peg$c127 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c128 = function(s, w) {
            var val;
            val = "!" + p.join(s) + p.join(w);
            return val.trim();
          },
        peg$c129 = { type: "any", description: "any character" },
        peg$c130 = function() {
            throw new SyntaxError('Invalid Strength or Weight', null, null, null, line(), column());
          },
        peg$c131 = /^[a-zA-Z0-9#.\-_$:""&]/,
        peg$c132 = { type: "class", value: "[a-zA-Z0-9#.\\-_$:\"\"&]", description: "[a-zA-Z0-9#.\\-_$:\"\"&]" },
        peg$c133 = " ",
        peg$c134 = { type: "literal", value: " ", description: "\" \"" },
        peg$c135 = function(val) {
            return [ "number",
              val
            ];
          },
        peg$c136 = function(digits) {
            return parseInt(digits.join(""), 10);
          },
        peg$c137 = ".",
        peg$c138 = { type: "literal", value: ".", description: "\".\"" },
        peg$c139 = function(digits) {
            return parseFloat(digits.join(""));
          },
        peg$c140 = /^[\-+]/,
        peg$c141 = { type: "class", value: "[\\-+]", description: "[\\-+]" },
        peg$c142 = { type: "other", description: "whitespace" },
        peg$c143 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c144 = { type: "class", value: "[\\t\\x0B\\f \\xA0\\uFEFF]", description: "[\\t\\x0B\\f \\xA0\\uFEFF]" },
        peg$c145 = /^[\n\r\u2028\u2029]/,
        peg$c146 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c147 = { type: "other", description: "end of line" },
        peg$c148 = "\n",
        peg$c149 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c150 = "\r\n",
        peg$c151 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c152 = "\r",
        peg$c153 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c154 = "\u2028",
        peg$c155 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c156 = "\u2029",
        peg$c157 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c158 = ";",
        peg$c159 = { type: "literal", value: ";", description: "\";\"" },
        peg$c160 = void 0,
        peg$c161 = { type: "other", description: "comment" },
        peg$c162 = "/*",
        peg$c163 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c164 = "*/",
        peg$c165 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c166 = "//",
        peg$c167 = { type: "literal", value: "//", description: "\"//\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseStatement();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseStatement();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c2();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsedebug() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseStatement();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseStatement();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c3(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseStatement() {
      var s0, s1, s2, s3;
